Refactored and linted all the vision subsystem code