@@ -14,7 +14,6 @@ import java.util.List;
 import java.util.Optional;
 import java.util.Set;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 import org.photonvision.EstimatedRobotPose;
 import org.photonvision.PhotonCamera;
 import org.photonvision.PhotonPoseEstimator;
@@ -22,11 +21,11 @@ import org.photonvision.PhotonPoseEstimator.PoseStrategy;
 import org.photonvision.targeting.PhotonTrackedTarget;
 
 public class VisionIOPhotonVision implements VisionIO {
-  protected final PhotonCamera m_camera;
-  protected final Transform3d m_robotToCamera;
-  protected final PhotonPoseEstimator m_poseEstimator;
+  protected final PhotonCamera camera;
+  protected final Transform3d robotToCamera;
+  protected final PhotonPoseEstimator poseEstimator;
 
-  protected final Supplier<SwerveDriveState> m_swerveDriveStateSupplier;
+  protected final Supplier<SwerveDriveState> swerveDriveStateSupplier;
 
   /**
    * Creates a new VisionIOPV.
@@ -37,72 +36,65 @@ public class VisionIOPhotonVision implements VisionIO {
    */
   public VisionIOPhotonVision(
       String name, Transform3d robotToCamera, Supplier<SwerveDriveState> swerveDriveStateSupplier) {
-    m_camera = new PhotonCamera(name);
-    m_robotToCamera = robotToCamera;
-    m_swerveDriveStateSupplier = swerveDriveStateSupplier;
-    m_poseEstimator =
+    this.camera = new PhotonCamera(name);
+    this.robotToCamera = robotToCamera;
+    this.swerveDriveStateSupplier = swerveDriveStateSupplier;
+    poseEstimator =
         new PhotonPoseEstimator(
-            APTAG_FIELD_LAYOUT, PoseStrategy.MULTI_TAG_PNP_ON_COPROCESSOR, m_robotToCamera);
-    m_poseEstimator.setMultiTagFallbackStrategy(PoseStrategy.PNP_DISTANCE_TRIG_SOLVE);
+            APTAG_FIELD_LAYOUT, PoseStrategy.MULTI_TAG_PNP_ON_COPROCESSOR, robotToCamera);
+    poseEstimator.setMultiTagFallbackStrategy(PoseStrategy.PNP_DISTANCE_TRIG_SOLVE);
 
     // Reset heading data before pose initialization //
-    m_poseEstimator.resetHeadingData(Timer.getFPGATimestamp(), swerveDriveStateSupplier.get().Pose.getRotation());
+    poseEstimator.resetHeadingData(
+        Timer.getFPGATimestamp(), swerveDriveStateSupplier.get().Pose.getRotation());
   }
 
   @Override
   public String getCameraName() {
     // Get the camera object
-    return m_camera.getName();
+    return camera.getName();
   }
 
   @Override
   public void updateInputs(VisionIOInputs inputs) {
-    inputs.connected = m_camera.isConnected();
-    inputs.cameraName = m_camera.getName();
+    inputs.setConnected(camera.isConnected());
+    inputs.setCameraName(camera.getName());
 
     // Update pose estimation heading data //
-    m_poseEstimator.addHeadingData(
-        Timer.getFPGATimestamp(), m_swerveDriveStateSupplier.get().Pose.getRotation());
+    poseEstimator.addHeadingData(
+        Timer.getFPGATimestamp(), swerveDriveStateSupplier.get().Pose.getRotation());
 
     // Read new camera observations
     Set<Short> tagIds = new HashSet<>();
-    Optional<EstimatedRobotPose> visionEst = Optional.empty();
     List<PoseObservation> poseObservations = new LinkedList<>();
-    for (var result : m_camera.getAllUnreadResults()) {
+    for (var result : camera.getAllUnreadResults()) {
       // Update latest target observation
+      inputs.setLatestTargetObservation(new TargetObservation(new Rotation2d(), new Rotation2d()));
       if (result.hasTargets()) {
-        inputs.latestTargetObservation =
+        inputs.setLatestTargetObservation(
             new TargetObservation(
                 Rotation2d.fromDegrees(result.getBestTarget().getYaw()),
-                Rotation2d.fromDegrees(result.getBestTarget().getPitch()));
-      } else {
-        inputs.latestTargetObservation = new TargetObservation(new Rotation2d(), new Rotation2d());
+                Rotation2d.fromDegrees(result.getBestTarget().getPitch())));
       }
 
       // Add pose observation based on how many tags we see
-      visionEst = m_poseEstimator.update(result);
+      Optional<EstimatedRobotPose> visionEst = poseEstimator.update(result);
 
       visionEst.ifPresent(
           estimator -> {
             // Get robot pose
             Pose3d robotPose = estimator.estimatedPose;
 
-            // Calculate tag distance
-            double totalAvgTagDistance = 0.0;
-            for (var target : result.targets) {
-              totalAvgTagDistance += target.bestCameraToTarget.getTranslation().getNorm();
-            }
-
-            // Calculate average tag distance if multiple tags are used
-            if (result.getTargets().size() > 0) {
-              totalAvgTagDistance /= result.getTargets().size();
-            }
+            // Calculate average tag distance
+            double averageTagDistance =
+                result.getTargets().stream()
+                    .mapToDouble(t -> t.bestCameraToTarget.getTranslation().getNorm())
+                    .average()
+                    .orElse(0.0);
 
             // Add tag IDs
             List<Short> tagIdsUsed =
-                result.getTargets().stream()
-                    .map(target -> (short) target.getFiducialId())
-                    .collect(Collectors.toList());
+                result.getTargets().stream().map(target -> (short) target.getFiducialId()).toList();
             tagIds.addAll(tagIdsUsed);
 
             // Calculate average ambiguity across all visible tags
@@ -116,38 +108,24 @@ public class VisionIOPhotonVision implements VisionIO {
             double latencySeconds = result.metadata.getLatencyMillis() / 1000;
 
             // Calculate Edge Factor //
-            double maxEdgeScore = 1.0; // Default: assume centered
-            if (result.hasTargets()) {
-              // Define thresholds based on your camera's FOV (e.g., half the FOV)
-              double yawThreshold =
-                  VisionConstants.CAMERA_FOV_HORIZONTAL_DEGREES
-                      / 2.0
-                      * 0.8; // e.g., 80% of half-FOV
-              double pitchThreshold = VisionConstants.CAMERA_FOV_VERTICAL_DEGREES / 2.0 * 0.8;
-
-              for (var target : result.targets) {
-                double targetYaw = Math.abs(target.getYaw());
-                double targetPitch = Math.abs(target.getPitch());
-
-                // Calculate a score (higher means closer to edge)
-                // Simple example: Max normalized distance from center
-                double yawScore =
-                    Math.max(0, targetYaw - yawThreshold * 0.5)
-                        / (yawThreshold * 0.5); // Score from 0 up based on exceeding 50% threshold
-                double pitchScore =
-                    Math.max(0, targetPitch - pitchThreshold * 0.5) / (pitchThreshold * 0.5);
-                double currentTargetEdgeScore =
-                    1.0
-                        + Math.max(
-                            yawScore, pitchScore); // Factor starts at 1, increases if near edge
-
-                maxEdgeScore =
-                    Math.max(
-                        maxEdgeScore,
-                        currentTargetEdgeScore); // Use the worst score among visible tags
-              }
-            }
-            double edgeFactor = maxEdgeScore;
+            double yawThreshold =
+                VisionConstants.CAMERA_FOV_HORIZONTAL_DEGREES / 2.0 * 0.8; // e.g., 80% of half-FOV
+            double pitchThreshold = VisionConstants.CAMERA_FOV_VERTICAL_DEGREES / 2.0 * 0.8;
+            double edgeFactor =
+                result.getTargets().stream()
+                    .mapToDouble(
+                        target -> {
+                          double targetYaw = Math.abs(target.getYaw());
+                          double targetPitch = Math.abs(target.getPitch());
+                          double yawScore =
+                              Math.max(0, targetYaw - yawThreshold * 0.5) / (yawThreshold * 0.5);
+                          double pitchScore =
+                              Math.max(0, targetPitch - pitchThreshold * 0.5)
+                                  / (pitchThreshold * 0.5);
+                          return 1.0 + Math.max(yawScore, pitchScore);
+                        })
+                    .max()
+                    .orElse(1.0);
 
             // Add pose observation calculated from the PhotonPoseEstimator
             poseObservations.add(
@@ -156,7 +134,7 @@ public class VisionIOPhotonVision implements VisionIO {
                     robotPose, // 3D pose estimate
                     ambiguity, // Ambiguity
                     result.getTargets().size(), // Tag count
-                    totalAvgTagDistance, // Average tag distance
+                    averageTagDistance, // Average tag distance
                     latencySeconds, // Latency
                     edgeFactor, // Edge factor
                     PoseObservationType.PHOTONVISION)); // Observation type
@@ -164,16 +142,9 @@ public class VisionIOPhotonVision implements VisionIO {
     }
 
     // Save pose observations to inputs object
-    inputs.poseObservations = new PoseObservation[poseObservations.size()];
-    for (int i = 0; i < poseObservations.size(); i++) {
-      inputs.poseObservations[i] = poseObservations.get(i);
-    }
+    inputs.setPoseObservations(poseObservations.toArray(new PoseObservation[0]));
 
     // Save tag IDs to inputs objects
-    inputs.tagIds = new int[tagIds.size()];
-    int i = 0;
-    for (int id : tagIds) {
-      inputs.tagIds[i++] = id;
-    }
+    inputs.setTagIds(tagIds.stream().mapToInt(Short::shortValue).toArray());
   }
 }
